src/snapshots/mdir4__ui__tests__empty.snap
---
source: src/ui.rs
expression: "rendered(&empty, 80, 25)"
---
/work/한 글 -folder                                                               
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
(no items)                                           │ F 0  D 0  S 0/0B  -- Free
F1 Help       F2 Ren        F3 View      F4 Edit      F5 Copy      F6 Move      
F7 Dir        F8 Del        F9 Shell     F10 MCD      F11 ---      F12 Menu
