src/snapshots/mdir4__ui__tests__help.snap
---
source: src/ui.rs
expression: "rendered(&basic, 80, 25)"
---
/work/한 글 -folder                                                               
  docs                              <DIR> ----- --:--                           
  README.md                          2.0K ----- --:--                           
  한 글 -문 서 .txt                       42B ----- --:--                           
        ┌ Mdir4 Help ──────────────────────────────────────────────────┐        
        │Active commands                                               │        
        │Up          Up                                                │        
        │Down        Down                                              │        
        │Left        Left                                              │        
        │Right       Right                                             │        
        │PgUp        PgUp                                              │        
        │PgDn        PgDn                                              │        
        │Home        Home                                              │        
        │End         End                                               │        
        │Enter       Open                                              │        
        │Backspace   Parent                                            │        
        │Space       Mark                                              │        
        │Insert      Mark+Down                                         │        
        │Ctrl+A      Select All                                        │        
        │R           Refresh                                           │        
        └──────────────────────────────────────────────────────────────┘        
                                                                                
README.md  2.0K FILE                               │ F 2  D 1  S 1/2.0K  -- Free
F1 Help       F2 Ren        F3 View      F4 Edit      F5 Copy      F6 Move      
F7 Dir        F8 Del        F9 ---       F10 MCD      F11 QCD      F12 Menu
