src/snapshots/mdir4__ui__tests__marked.snap
---
source: src/ui.rs
expression: "rendered(&basic, 80, 25)"
---
/work/한 글 -folder                                                               
  docs                              <DIR> ----- --:--                           
  README.md                          2.0K ----- --:--                           
  한 글 -문 서 .txt                       42B ----- --:--                           
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
README.md  2.0K FILE                               │ F 2  D 1  S 1/2.0K  -- Free
F1 Help       F2 Ren        F3 View      F4 Edit      F5 Copy      F6 Move      
F7 Dir        F8 Del        F9 Shell     F10 MCD      F11 ---      F12 Menu
