src/snapshots/mdir4__ui__tests__mcd-hierarchy-map.snap
---
source: src/ui.rs
expression: output
---
                                                 Mdir4 Change Directory                                                 
/───────────────────────├─Applications                                  ├─Desktop                                       
                        ├─Library                                       ├─Documents                                     
                        └─Users───────────────────seunghanlee───────────├─Downloads                                     
                                                                        └─Library───────────────├─Accessibility         
                                                                                                ├─Accounts              
                                                                                                └─Application Support   
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
/Users/seunghanlee/Library                                                                                     [Library]
F1 Help  F2 Rescan  F3 Drives                                                                     Enter Open  Esc Cancel
