src/snapshots/mdir4__ui__tests__quit-confirm.snap
---
source: src/ui.rs
expression: "rendered(&basic, 80, 25)"
---
/work/한 글 -folder                                                               
docs                                                           <DIR> ----- --:--
README.md                                                       2.0K ----- --:--
한 글 -문 서 .txt                                                    42B ----- --:--
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                     ┌ Confirm Quit ──────────────────────┐                     
                     │             Quit Mdir4?            │                     
                     │                                    │                     
                     │     Enter Confirm   Esc Cancel     │                     
                     └────────────────────────────────────┘                     
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
README.md   FILE   2.0K   ----                                                  
Files 2  Dirs 1  Selected 1 / 2.0K  Free --  Items 3                            
Enter Open  Backspace Parent  Space Mark  R Refresh  Ctrl+Q Quit                
1Help 2Ren 3View 4Edit 5Copy 6Move 7Dir 8Del 9--- 10MCD 11QCD 12Menu
