src/snapshots/mdir4__ui__tests__too-small.snap
---
source: src/ui.rs
expression: "rendered(&small, 59, 14)"
---
            Terminal too small (minimum 60x15)
