src/snapshots/mdir4__ui__tests__viewport-120x40.snap
---
source: src/ui.rs
expression: "rendered(&wide, 120, 40)"
---
/work/한 글 -folder                                                                                                       
  wide-density.txt                   8.0K ----- --:--                                                                   
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
wide-density.txt  8.0K FILE                                                           │ 1 File  0 Dir  Sel 0/0B  Free --
F1 Help   F2 Ren    F3 View   F4 Edit   F5 Copy   F6 Move   F7 Dir    F8 Del    F9 ---    F10 MCD   F11 QCD   F12 Menu
